Fix desktop geosearch on mobile
#154. Mobile seems messed up though. (Even without these changes.) Not
sure if something is off with my build, or if something else changed.

This should fix though.

--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -19,6 +19,14 @@ body {
 }
 
 
+#geosearch{
+  width:301px;
+}
+
+#geosearchwrapper img{
+  display:none;
+}
+
 #chatcontrols {
   height: 38px;
   width: 100%;
